feat: kafka module lombok integration & clean up